--- a/index.html
+++ b/index.html
@@ -1,330 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<title>Emoji Merge</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Fruit Merge v49</title>
+    <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
+    <style>
+        :root { --accent: #3498db; }
+        body { margin: 0; padding: 0; overflow: hidden; background: #000; font-family: 'Segoe UI', sans-serif; touch-action: none; -webkit-user-select: none; user-select: none; }
+        #game-container { position: relative; width: 100vw; height: 100vh; margin: 0 auto; background: #E6E6FA; transition: background 0.3s; }
+        
+        /* UI Header */
+        #header { position: absolute; top: 0; left: 0; width: 100%; height: 110px; background: rgba(255,255,255,0.9); border-bottom: 3px solid #333; z-index: 10; display: flex; flex-direction: column; padding: 10px; box-sizing: border-box; }
+        .stats-row { display: flex; justify-content: space-between; align-items: center; font-weight: bold; color: #333; font-size: 14px; }
+        #next-preview { font-size: 32px; text-align: center; }
 
-<script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
+        /* Power Up Bar */
+        #pwr-bar { position: absolute; bottom: 70px; left: 0; width: 100%; display: flex; justify-content: center; gap: 10px; z-index: 10; }
+        .pwr-btn { width: 50px; height: 50px; border-radius: 12px; border: 2px solid #333; color: white; font-size: 20px; cursor: pointer; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 0 #222; }
+        .pwr-btn:active { transform: translateY(2px); box-shadow: 0 2px 0 #222; }
+        #btn-bomb { background: #e67e22; } #btn-wipe { background: #9b59b6; } #btn-evo { background: #f1c40f; }
+        .pwr-active { animation: pulse 1s infinite; border-color: white; box-shadow: 0 0 15px white; }
 
-<style>
-html,body{
-  margin:0;
-  padding:0;
-  overflow:hidden;
-  background:#E6E6FA;
-  font-family:system-ui,sans-serif;
-}
-canvas{
-  display:block;
-  touch-action:none;
-  user-select:none;
-  -webkit-user-select:none;
-  -webkit-touch-callout:none;
-}
-#header{
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  height:110px;
-  background:rgba(255,255,255,0.96);
-  z-index:1000;
-  display:flex;
-  align-items:center;
-  justify-content:space-around;
-  font-weight:bold;
-}
-#footer{
-  position:absolute;
-  bottom:0;
-  left:0;
-  right:0;
-  height:60px;
-  background:rgba(255,255,255,0.96);
-  z-index:1000;
-}
-.btn{
-  position:absolute;
-  bottom:10px;
-  height:40px;
-  border-radius:8px;
-  border:2px solid #333;
-  background:#3498db;
-  color:white;
-  font-weight:bold;
-  cursor:pointer;
-  z-index:2000;
-}
-#shopBtn{ right:10px; width:70px; }
-#helpBtn{ right:90px; width:40px; }
-.modal{
-  display:none;
-  position:absolute;
-  inset:20px;
-  background:white;
-  border-radius:20px;
-  border:4px solid #3498db;
-  padding:16px;
-  z-index:5000;
-  overflow-y:auto;
-}
-.modal h2{ margin-top:0; }
-.store-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(90px,1fr));
-  gap:10px;
-}
-.store-item{
-  border:2px solid #ccc;
-  border-radius:10px;
-  padding:6px;
-  text-align:center;
-  cursor:pointer;
-}
-.store-item.owned{ border-color:#2ecc71; }
-.store-item.equipped{ border-color:#f1c40f; }
-.death{
-  stroke:red;
-  stroke-dasharray:6,6;
-}
-</style>
+        /* Footer */
+        #footer { position: absolute; bottom: 0; left: 0; width: 100%; height: 60px; background: rgba(255,255,255,0.8); display: flex; justify-content: space-around; align-items: center; z-index: 10; }
+        .footer-btn { padding: 8px 20px; background: var(--accent); color: white; border-radius: 20px; font-weight: bold; border: none; cursor: pointer; }
+
+        /* Modals */
+        .modal { display: none; position: absolute; inset: 20px; background: white; z-index: 100; border-radius: 20px; border: 4px solid var(--accent); padding: 20px; overflow-y: auto; }
+        .grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-top: 15px; }
+        .item-card { border: 2px solid #eee; padding: 10px; border-radius: 12px; text-align: center; font-size: 12px; cursor: pointer; }
+        .item-card.equipped { border-color: #2ecc71; background: #f0fff4; }
+
+        @keyframes pulse { 0% { scale: 1; } 50% { scale: 1.1; } 100% { scale: 1; } }
+        canvas { display: block; }
+    </style>
 </head>
-
 <body>
 
-<div id="header">
-  <div>Score<br><span id="score">0</span></div>
-  <div>Best<br><span id="best">0</span></div>
-  <div>Points<br><span id="points">0</span></div>
-  <div>Next<br><span id="nextEmoji">🍒</span></div>
-</div>
-
-<div id="footer"></div>
-
-<button id="shopBtn" class="btn" onclick="openModal('shop')">SHOP</button>
-<button id="helpBtn" class="btn" onclick="openModal('help')">?</button>
-
-<div id="help" class="modal">
-  <h2>How to Play</h2>
-  <p>Drop emojis by tapping the screen.</p>
-  <p>When two identical emojis touch, they merge into the next tier.</p>
-  <p>Do not let items stay above the red dashed line for 3 seconds.</p>
-  <p>Merges earn score and points. Points can be spent in the shop.</p>
-  <button onclick="closeModal('help')">Close</button>
-</div>
-
-<div id="shop" class="modal">
-  <h2>Skins</h2>
-  <div id="skinGrid" class="store-grid"></div>
-  <h2>Themes</h2>
-  <div id="themeGrid" class="store-grid"></div>
-  <button onclick="closeModal('shop')">Close</button>
-</div>
-
-<script>
-/* ---------------- DATA ---------------- */
-const SKINS={
- Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🎃"],
- Animals:["🐭","🐰","🦊","🐻","🐼","🦁","🐯","🐷","🐸","🐙","🐳","🦄"],
- Retro:["▲","■","⬢","◆","★","✚","✖","⬤","⬟","▼","⬓","⌬"],
- Space:["☄️","🛰️","🪐","🌙","☀️","🔭","🚀","👽","🛸","🌌","🌠","👨‍🚀"],
- Desserts:["🍪","🍩","🧁","🍦","🍰","🥧","🍫","🍬","🍭","🍮","🍯","🎂"],
- Cars:["🏎️","🚗","🚕","🚙","🚌","🚐","🚛","🚜","🚓","🚑","🚒","🚀"],
- Plants:["🌿","🌵","🪴","🌲","🌳","🌴","🎋","🌿","🍀","🍄","🌻","🌹"]
-};
-
-const THEMES={
- Lilac:"#E6E6FA",Sunset:"#ff7675",Forest:"#55efc4",Midnight:"#2d3436",
- Gold:"#fdcb6e",Slate:"#718093",Ocean:"#0984e3",Cherry:"#d63031",
- Mint:"#00b894",Grape:"#6c5ce7",Pumpkin:"#e67e22",Coffee:"#634832",
- Rose:"#fd79a8",Sky:"#81ecec",Grass:"#26de81",Charcoal:"#2f3640"
-};
-
-const COLORS=["#ff7979","#ffbe76","#f6e58d","#badc58","#7ed6df","#686de0","#4834d4","#f0932b","#eb4d4b","#6ab04c","#130f40","#222f3e"];
-const RADII=[18,25,32,40,50,60,72,85,100,115,135,155];
-
-/* ---------------- SAVE ---------------- */
-let save=JSON.parse(localStorage.getItem("mergeSave")||"{}");
-save.best||=0;
-save.points||=0;
-save.skin||="Fruit";
-save.ownedSkins||=["Fruit"];
-save.theme||="Lilac";
-save.ownedThemes||=["Lilac"];
-localStorage.setItem("mergeSave",JSON.stringify(save));
-
-/* ---------------- EMOJI CACHE ---------------- */
-let emojiCache={};
-function buildCache(){
-  emojiCache={};
-  const c=document.createElement("canvas");
-  c.width=c.height=120;
-  const x=c.getContext("2d");
-  x.textAlign="center";
-  x.textBaseline="middle";
-  x.font="90px serif";
-  SKINS[save.skin].forEach((e,i)=>{
-    x.clearRect(0,0,120,120);
-    x.fillText(e,60,60);
-    const img=new Image();
-    img.src=c.toDataURL();
-    emojiCache[i]=img;
-  });
-}
-buildCache();
-
-/* ---------------- MATTER ---------------- */
-const {Engine,Render,Runner,Bodies,Composite,Events}=Matter;
-const engine=Engine.create();
-const render=Render.create({
-  element:document.body,
-  engine,
-  options:{ width:innerWidth, height:innerHeight, wireframes:false, background:"transparent"}
-});
-
-function walls(){
-  Composite.clear(engine.world,false);
-  const w=render.options.width,h=render.options.height;
-  Composite.add(engine.world,[
-    Bodies.rectangle(w/2,h-40,w,20,{isStatic:true}),
-    Bodies.rectangle(-10,h/2,20,h,{isStatic:true}),
-    Bodies.rectangle(w+10,h/2,20,h,{isStatic:true})
-  ]);
-}
-walls();
-Render.run(render);
-Runner.run(Runner.create(),engine);
-
-/* ---------------- GAME ---------------- */
-let score=0,current=0,next=Math.floor(Math.random()*4),lastX=200,canDrop=true;
-
-function updateUI(){
-  score=Math.floor(score);
-  save.best=Math.max(save.best,score);
-  localStorage.setItem("mergeSave",JSON.stringify(save));
-  scoreEl.textContent=score;
-  bestEl.textContent=save.best;
-  pointsEl.textContent=save.points;
-  nextEmoji.textContent=SKINS[save.skin][next];
-}
-
-const scoreEl=document.getElementById("score");
-const bestEl=document.getElementById("best");
-const pointsEl=document.getElementById("points");
-const nextEmoji=document.getElementById("nextEmoji");
-
-Events.on(render,"afterRender",()=>{
-  const ctx=render.context,w=render.options.width,h=render.options.height;
-  ctx.setLineDash([6,6]);
-  ctx.strokeStyle="red";
-  ctx.beginPath();
-  ctx.moveTo(0,110);
-  ctx.lineTo(w,110);
-  ctx.stroke();
-  ctx.setLineDash([]);
-  ctx.strokeStyle="rgba(0,0,0,0.2)";
-  ctx.beginPath();
-  ctx.moveTo(lastX,110);
-  ctx.lineTo(lastX,h-60);
-  ctx.stroke();
-  Composite.allBodies(engine.world).forEach(b=>{
-    if(b.plugin?.t!==undefined){
-      ctx.save();
-      ctx.translate(b.position.x,b.position.y);
-      ctx.rotate(b.angle);
-      ctx.fillStyle=COLORS[b.plugin.t];
-      ctx.beginPath();
-      ctx.arc(0,0,b.circleRadius,0,Math.PI*2);
-      ctx.fill();
-      ctx.drawImage(emojiCache[b.plugin.t],-b.circleRadius,-b.circleRadius,b.circleRadius*2,b.circleRadius*2);
-      ctx.restore();
-    }
-  });
-});
-
-Events.on(engine,"collisionStart",e=>{
-  e.pairs.forEach(p=>{
-    const a=p.bodyA,b=p.bodyB;
-    if(a.plugin?.t===b.plugin?.t && a.plugin.t<11){
-      Composite.remove(engine.world,[a,b]);
-      const t=a.plugin.t+1;
-      Composite.add(engine.world,Bodies.circle(
-        (a.position.x+b.position.x)/2,
-        (a.position.y+b.position.y)/2,
-        RADII[t],
-        {restitution:.3,plugin:{t,s:Date.now()}}
-      ));
-      score+=t*10;
-      save.points+=t;
-      updateUI();
-    }
-  });
-});
-
-/* ---------------- INPUT ---------------- */
-render.canvas.addEventListener("pointermove",e=>lastX=e.clientX);
-render.canvas.addEventListener("pointerup",e=>{
-  if(!canDrop||e.clientY<110||e.clientY>innerHeight-60)return;
-  Composite.add(engine.world,Bodies.circle(lastX,110,RADII[current],{restitution:.3,plugin:{t:current,s:Date.now()}}));
-  current=next;
-  next=Math.floor(Math.random()*4);
-  canDrop=false;
-  setTimeout(()=>canDrop=true,400);
-  updateUI();
-});
-render.canvas.addEventListener("touchstart",e=>e.preventDefault(),{passive:false});
-
-/* ---------------- STORE ---------------- */
-function openModal(id){document.getElementById(id).style.display="block";}
-function closeModal(id){document.getElementById(id).style.display="none";}
-
-const skinGrid=document.getElementById("skinGrid");
-const themeGrid=document.getElementById("themeGrid");
-
-function buildStore(){
-  skinGrid.innerHTML="";
-  Object.keys(SKINS).forEach(k=>{
-    const d=document.createElement("div");
-    d.className="store-item "+(save.skin===k?"equipped":save.ownedSkins.includes(k)?"owned":"");
-    d.innerHTML=k;
-    d.onclick=()=>{
-      if(!save.ownedSkins.includes(k)){
-        if(save.points<500)return;
-        save.points-=500;
-        save.ownedSkins.push(k);
-      }
-      save.skin=k;
-      buildCache();
-      buildStore();
-      updateUI();
-    };
-    skinGrid.appendChild(d);
-  });
-  themeGrid.innerHTML="";
-  Object.entries(THEMES).forEach(([k,v])=>{
-    const d=document.createElement("div");
-    d.className="store-item "+(save.theme===k?"equipped":save.ownedThemes.includes(k)?"owned":"");
-    d.style.background=v;
-    d.innerHTML=k;
-    d.onclick=()=>{
-      if(!save.ownedThemes.includes(k)){
-        if(save.points<300)return;
-        save.points-=300;
-        save.ownedThemes.push(k);
-      }
-      save.theme=k;
-      document.body.style.background=v;
-      buildStore();
-      updateUI();
-    };
-    themeGrid.appendChild(d);
-  });
-}
-document.body.style.background=THEMES[save.theme];
-buildStore();
-updateUI();
-</script>
-
-</body>
-</html>
+<div id="game-container">
+    <div id="header">
+        <div class="stats-row">
+            <div>SCORE: <span id="cur-score">0</span></div>
+            <div>BEST: <span id="hi-score">0</span></div>
+        </div>
+        <div id="next-preview"></div>
+        <div class="stats-row" style="margin-top:5px">
+            <div>WALLET
+              
